--- a/css/media.css
+++ b/css/media.css
@@ -14,8 +14,8 @@
         position: inherit;
         width: 40%;
         height: auto;
-        font-size: 30px;
-        line-height: 34px;
+        /*font-size: 30px;
+        line-height: 34px;*/
     }
     
     .hi_part{
@@ -53,6 +53,10 @@
 
     .about{
         margin-top: 5%;
+    }
+    
+    .spacehere{
+        margin-right: 5px;
     }
     
     .footer{
